--- a/src/main/resources/templates/blog/article.html
+++ b/src/main/resources/templates/blog/article.html
@@ -135,10 +135,10 @@
 	
     <div class="rnav">
       <ul>
-            	<li class="rnav2"><a href="/life">乐活空间</a></li>
-            	<li class="rnav2"><a href="/life">闲暇时光</a></li>
-            	<li class="rnav2"><a href="/life">享受慢活</a></li>
-            	<li class="rnav2"><a href="/life">慢阅读</a></li>
+            	<li class="rnav2"><a href="/life">大数据</a></li>
+            	<li class="rnav2"><a href="/life">区块链</a></li>
+            	<li class="rnav2"><a href="/life">人工智能</a></li>
+            	<li class="rnav2"><a href="/life">黑客</a></li>
             	<li class="rnav2"><a href="/life">悠客</a></li>
             	<li class="rnav2"><a href="/life">慢氧吧</a></li>
      </ul>
