--- a/src/main/resources/templates/blog/learn.html
+++ b/src/main/resources/templates/blog/learn.html
@@ -87,9 +87,9 @@
               <h2>栏目导航</h2>
               <ul>
                         <li><a href="#" v-on:click="queryLanMu('10')">心得笔记</a></li>
-                        <li><a href="#" v-on:click="queryLanMu('11')">IP查询</a></li>
+                        <li><a href="#" v-on:click="queryLanMu('11')">JAVA</a></li>
                         <li><a href="#" v-on:click="queryLanMu('12')">CSS3|Html5</a></li>
-                        <li><a href="#" v-on:click="queryLanMu('13')">网站建设</a></li>
+                        <li><a href="#" v-on:click="queryLanMu('13')">C&C++</a></li>
                         <li><a href="#" v-on:click="queryLanMu('14')"> JS经典实例</a></li>
                         <li><a href="#" v-on:click="queryLanMu('15')">推荐工具</a></li>
              </ul>
@@ -98,9 +98,9 @@
           <h2>栏目导航</h2>
           <ul>
               <li><a href="#" v-on:click="queryLanMu('10')">心得笔记</a></li>
-              <li><a href="#" v-on:click="queryLanMu('11')">IP查询</a></li>
+              <li><a href="#" v-on:click="queryLanMu('11')">JAVA</a></li>
               <li><a href="#" v-on:click="queryLanMu('12')">CSS3|Html5</a></li>
-              <li><a href="#" v-on:click="queryLanMu('13')">网站建设</a></li>
+              <li><a href="#" v-on:click="queryLanMu('13')">C&C++</a></li>
               <li><a href="#" v-on:click="queryLanMu('14')"> JS经典实例</a></li>
               <li><a href="#" v-on:click="queryLanMu('15')">推荐工具</a></li>
           </ul>
