--- a/src/main/resources/templates/blog/learn_article.html
+++ b/src/main/resources/templates/blog/learn_article.html
@@ -136,9 +136,9 @@
     <div class="rnav">
       <ul>
             	<li class="rnav2"><a href="/learn">心得笔记</a></li>
-            	<li class="rnav2"><a href="/learn">IP查询</a></li>
+            	<li class="rnav2"><a href="/learn">JAVA</a></li>
             	<li class="rnav2"><a href="/learn">CSS3|Html5</a></li>
-            	<li class="rnav2"><a href="/learn">网站建设</a></li>
+            	<li class="rnav2"><a href="/learn">C&C++</a></li>
             	<li class="rnav2"><a href="/learn">JS经典实例</a></li>
             	<li class="rnav2"><a href="/learn">推荐工具</a></li>
      </ul>
