--- a/src/main/resources/templates/blog/life.html
+++ b/src/main/resources/templates/blog/life.html
@@ -100,13 +100,13 @@
        <nav class="nav">
           <ul>
                
-           <h4 class="ab"><a href="#" title="乐活空间" v-on:click="queryLanMu('16')">乐活空间</a></h4>
+           <h4 class="ab"><a href="#" title="乐活空间" v-on:click="queryLanMu('16')">大数据</a></h4>
                  
-           <h4 class="ab"><a href="#" title="闲暇时光" v-on:click="queryLanMu('17')">闲暇时光</a></h4>
+           <h4 class="ab"><a href="#" title="闲暇时光" v-on:click="queryLanMu('17')">区块链</a></h4>
                  
-           <h4 class="ab"><a href="#" title="享受慢活" v-on:click="queryLanMu('18')">享受慢活</a></h4>
+           <h4 class="ab"><a href="#" title="享受慢活" v-on:click="queryLanMu('18')">人工智能</a></h4>
                  
-           <h4 class="ab"><a href="#" title="慢阅读"   v-on:click="queryLanMu('19')">慢阅读</a></h4>
+           <h4 class="ab"><a href="#" title="慢阅读"   v-on:click="queryLanMu('19')">黑客</a></h4>
                  
            <h4 class="ab"><a href="#" title="悠客"     v-on:click="queryLanMu('20')">悠客</a></h4>
                  
