--- a/src/main/resources/templates/blog/doing.html
+++ b/src/main/resources/templates/blog/doing.html
@@ -6,14 +6,10 @@
 <meta name="description" content="一个关注旅行，在路上寻找那个丢失自我，远离城市的喧哗，放慢脚步去享受慢生活，分享在路上所见所闻，与大家一起发现这世界的千奇百怪！" />
 <link href="/css/base.css" rel="stylesheet">
 <link href="/css/mood.css" rel="stylesheet">
-
+<link href="/css/striveboybiao-skin.css" rel="stylesheet">
 <!--[if lt IE 9]>
 <![endif]--><script src="/js/modernizr.js"></script>
-<!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/jquery.1.4.2-min.js"></script>
-<script type="text/javascript" src="/js/js.js"></script>
-<script src="/js/swfobject_modified.js" type="text/javascript"></script>
-<!-- 返回顶部调用 end-->
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <!-- aiwke.com Baidu tongji analytics -->
@@ -29,9 +25,34 @@ s.parentNode.insertBefore(hm, s);
 
 </head>
 <body>
+<div class="baidu"><!--id 与 class命名-->
+    <div class="dimg_list">
+        <ul>
+            <li>
+                <!--图片三要素 宽度 高 描述-->
+                <img src="/images/img/1.jpg" width='100%' height='100%' dataSrc="/images/img/1.jpg"/><!--插入图片-->
+            </li>
+            <li>
+                <img src="/images/img/2.jpg" width='100%' height='100%' dataSrc="/images/img/2.jpg"/>
+            </li>
+            <li>
+                <img src="/images/img/3.jpg" width='100%' height='100%' dataSrc="/images/img/3.jpg"/>
+            </li>
+            <li>
+                <img src="/images/img/4.jpg" width='100%' height='100%' dataSrc="/images/img/4.jpg"/>
+            </li>
+            <li>
+                <img src="/images/img/5.jpg" width='100%' height='100%' dataSrc="/images/img/5.jpg"/>
+            </li>
+        </ul>
+    </div>
+</div>
+<a href="#" class="btn"></a><!--超链接 行内元素-->
+
+
 <!--header-->
 <header>
-      <div id="logo"><a href="http://www.zizhuling.cn" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
+      <div id="logo"><!--<a href="http://www.zizhuling.cn" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a>--></div>
       <nav class="topnav" id="topnav">
           <a href="/index" title="首页"><span>首页</span><span class="en"></span></a>
           <a href="/about" title="关于我"><span>关于我</span><span class="en"></span></a>
@@ -96,6 +117,11 @@ s.parentNode.insertBefore(hm, s);
   <p class="ft-copyright">何彪个人博客 Sunshine &nbsp;&nbsp;鄂ICP备18012534号</p>
 <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
+<!-- 返回顶部调用 begin -->
+<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="/js/js.js"></script>
+<script src="/js/swfobject_modified.js" type="text/javascript"></script>
+<!-- 返回顶部调用 end-->
 <script src="/js/silder.js"></script>
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
@@ -107,5 +133,6 @@ swfobject.registerObject("FlashID");
 <script src="/js/striveboybiao-text.js"></script>
 <!--下雪特效-->
 <!--<script src="/js/striveboybiao-snow.js"></script>-->
+<script src="/js/striveboybiao-skin.js"></script>
 </body>
 </html>
