--- a/src/main/resources/templates/blog/photo.html
+++ b/src/main/resources/templates/blog/photo.html
@@ -487,12 +487,12 @@ s.parentNode.insertBefore(hm, s);
         <a href="/" title="Midnight City"><img src="/images/1-2.jpg"></a>
         <a href="/"><img src="/images/1-4.jpg"></a>
         <a href="/"><img src="/images/1-5.jpg"></a>
-        <a href="/"><img src="/images/1-6.jpg"></a>
+        <a href="/"><img src="/image1.jpg.jpg"></a>
         <a href="/"><img src="/images/1-7.jpg"></a>
         <a href="/"><img src="/images/1-8.jpg"></a>
         <a href="/"><img src="/images/1-4.jpg"></a>
         <a href="/"><img src="/images/1-5.jpg"></a>
-        <a href="/"><img src="/images/1-6.jpg"></a>
+        <a href="/"><img src="/image1.jpg.jpg"></a>
         <a href="/"><img src="/images/1-7.jpg"></a>
         <a href="/"><img src="/images/1-8.jpg"></a>-->
 </div>
