--- a/src/main/resources/templates/blog/doing.html
+++ b/src/main/resources/templates/blog/doing.html
@@ -44,6 +44,21 @@ s.parentNode.insertBefore(hm, s);
             <li>
                 <img src="/images/img/5.jpg" width='100%' height='100%' dataSrc="/images/img/5.jpg"/>
             </li>
+            <li>
+                <img src="/images/img/6.jpg" width='100%' height='100%' dataSrc="/images/img/6.jpg"/>
+            </li>
+            <li>
+                <img src="/images/img/7.jpg" width='100%' height='100%' dataSrc="/images/img/7.jpg"/>
+            </li>
+            <li>
+                <img src="/images/img/8.jpg" width='100%' height='100%' dataSrc="/images/img/8.jpg"/>
+            </li>
+            <li>
+                <img src="/images/img/9.jpg" width='100%' height='100%' dataSrc="/images/img/9.jpg"/>
+            </li>
+            <li>
+                <img src="/images/img/10.jpg" width='100%' height='100%' dataSrc="/images/img/10.jpg"/>
+            </li>
         </ul>
     </div>
 </div>
