--- a/src/main/resources/templates/blog/learn_article.html
+++ b/src/main/resources/templates/blog/learn_article.html
@@ -64,6 +64,10 @@
     <ul class="pagelist">
     
    </ul>
+      <div class="otherlink">
+          <h2 style="color: red">您觉得喜欢本网站,或者觉得本文章对您有帮助，那么可以选择打赏。打赏多少，您高兴就行，谢谢您对我的支持！ ~(@^_^@)~</h2>
+          <img src="/images/img/qrcode.jpg" alt="" style="width: 200px;height: 200px;">
+      </div>
     <div class="keybq">
     	<p><span>关键字词</span>：<span th:text="${list.gjzc}"></span></p>
     </div>
