--- a/src/main/resources/templates/blog/saying.html
+++ b/src/main/resources/templates/blog/saying.html
@@ -106,7 +106,7 @@ var duoshuoQuery = {short_name:"aiwke"};
             <div class="avatar"><a href="/" title="何彪个人博客">
             	<span>何彪个人博客</span></a>
             </div>
-            <p>网名：<span>Sunshine</span> | 何彪个人博客</p>
+            <p>网名：<span>StriveBoyBiao</span> | 何彪个人博客</p>
             <p>姓名：何彪个人博客</p>
             <p>生日：1994-08-18</p>
             <p>籍贯：湖北--孝感市</p>
