--- a/src/main/resources/templates/blog/about.html
+++ b/src/main/resources/templates/blog/about.html
@@ -11,10 +11,10 @@
   <!--时间Css-->
 <link href="/css/View.css" rel="stylesheet">
 <!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="/js/js.js"></script>
-<script src="/js/swfobject_modified.js" type="text/javascript"></script>
-<!-- 返回顶部调用 end-->
+  <script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
+  <script type="text/javascript" src="/js/js.js"></script>
+  <script src="/js/swfobject_modified.js" type="text/javascript"></script>
+  <!-- 返回顶部调用 end-->
 <!--下雪-->
   <style>
     #Snow{
@@ -159,7 +159,7 @@ document.write("<font color=red>"+daysold+"</font>天 !");
     </div>
     <div class="about_c">
       <div class="avatar"><a href="/" title="何彪个人博客"><span>何彪个人博客</span></a></div>
-      <p>网名：<span>Sunshine</span> | 何彪个人博客</p>
+      <p>网名：<span>StriveBoyBiao</span> | 何彪个人博客</p>
       <p>姓名：何彪个人博客</p>
       <p>生日：1994-08-18</p>
       <p>籍贯：湖北--孝感市</p>
