--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -231,13 +231,15 @@ body, td, th {
         <li><a href='/tags' class='tagc1'>中国队</a></li>
       </ul>
     </div>
-    <!--<div class="tuwen">
+
+    <div class="tuwen">
       <h3>图文推荐</h3>
-      <ul>
-      <li><a href="/a/xiangshoumanhuo/20150609/22.html"><img src='/images/1433907076123565-lp.jpg' border='0' width='120' height='120' alt='两只蜗牛艰难又浪漫的一吻'><b>两只蜗牛艰难又浪漫的一吻</b></a>
-          <p><span class="tulanmu"><a href="/a/xiangshoumanhuo/index.html">享受慢活</a></span>
-          <span class="tutime">2015-06-10</span></p>
+      <ul id="readingData">
+     <!--   <li>
+          <a href="/a/xiangshoumanhuo/20150609/22.html"><img src='/images/1433907076123565-lp.jpg' border='0' width='120' height='120' alt='两只蜗牛艰难又浪漫的一吻'><b>两只蜗牛艰难又浪漫的一吻</b></a>
+          <p><span class="tulanmu"><a href="/a/xiangshoumanhuo/index.html">享受慢活</a></span><span class="tutime">2015-06-10</span></p>
         </li>
+
 <li><a href="/a/fenxiangshaer/20150610/70.html"><img src='/images/1433936858662517-lp.jpg' border='0' width='120' height='120' alt='今天'><b>今天</b></a>
           <p><span class="tulanmu"><a href="/a/fenxiangshaer/index.html">分享shaer</a></span>
           <span class="tutime">2015-06-10</span></p>
@@ -253,11 +255,11 @@ body, td, th {
 <li><a href="/a/manglitouxian/20150609/5.html"><img src='/images/1433907506239514-lp.jpg' border='0' width='120' height='120' alt='每个人都会有一段异常艰难的时光，'><b>每个人都会有一段异常艰难的时</b></a>
           <p><span class="tulanmu"><a href="/a/manglitouxian/index.html">忙里偷闲</a></span>
           <span class="tutime">2015-06-10</span></p>
-        </li>
+        </li>-->
 
         
       </ul>
-    </div>--> 
+    </div>
     
     <!--share分享-->
     <div class="share">
@@ -285,7 +287,7 @@ body, td, th {
   <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
 
-<script type="text/javascript" src="/js/sliders.js"></script>
+
 <!--[if lt IE 9]>
 
 <![endif]-->
@@ -294,13 +296,18 @@ body, td, th {
 <!-- 返回顶部调用 begin -->
 <script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="/js/js.js"></script>
+<!--天气-->
 <script src="/js/swfobject_modified.js" type="text/javascript"></script>
 <!-- 返回顶部调用 end-->
-
+<!--天气-->
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
 </script>
+<!--分享-->
+<script type="text/javascript" src="/js/silder.js"></script>
+
 <script src="/js/index.js" type="text/javascript"></script>
+<!--圆-->
 <script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
 <!--侧栏音乐-->
 <script src="https://free.limh.me/api/player.php?id=hebiao&jq=y&font=y" type="text/javascript"></script>
