--- a/src/main/resources/templates/blog/about.html
+++ b/src/main/resources/templates/blog/about.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>关于我-何彪个人博客-一个开启你记录旅行的足迹和分享途中所见所闻，与探讨互联网神秘技术的网站</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="关于我,何彪个人博客,何彪个人博客博客,爱旅游,个人博客" />
 <meta name="description" content="一个90后的我!有一颗爱玩和爱旅游的心,我喜欢在路上的感觉,人生就是一个得与失的过程,何彪个人博客个人博客来分享我在学习和旅行的一些心得与在路上中的心情,一起来分享你们在工作中、生活中、学习中各种的心得与精彩" />
 <link href="/css/base.css" rel="stylesheet">
