--- a/src/main/resources/templates/blog/article.html
+++ b/src/main/resources/templates/blog/article.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>何彪个人博客-一个开启你记录旅行的足迹和分享途中所见所闻，与探讨互联网神秘技术的网站</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords"  th:content="${list.gjzc}" />
 <meta name="description" th:content="${list.title}" />
 <link href="/css/base.css" rel="stylesheet">
