--- a/src/main/resources/templates/blog/saying.html
+++ b/src/main/resources/templates/blog/saying.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>留言板-何彪个人博客-一个开启你记录旅行的足迹和分享途中所见所闻，与探讨互联网神秘技术的网站</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="何彪个人博客,分享旅行,喜欢在路上,旅游,慢生活,所见所闻,千奇百怪,罗俊杰个人博客" />
 <meta name="description" content="一个关注旅行，在路上寻找那个丢失自我，远离城市的喧哗，放慢脚步去享受慢生活，分享在路上所见所闻，与大家一起发现这世界的千奇百怪！" />
 <link href="/css/base.css" rel="stylesheet">
@@ -130,14 +131,14 @@ var duoshuoQuery = {short_name:"aiwke"};
     </aside>
 </article>
 <footer>
-  <p class="ft-copyright">何彪个人博客 Sunshine &nbsp;&nbsp;鄂ICP备18012534号</p>
+  <p class="ft-copyright">何彪个人博客 StriveBoyBiao &nbsp;&nbsp;鄂ICP备18012534号</p>
 <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
 <script src="/js/silder1.js"></script>
 <script type="text/javascript">
 new slider({id:'slider'})
 </script>
-<script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
+<script color="255,0,0" opacity="0.7" zindex="-2" count="60" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
 <!--双击文字特效-->
 <script src="/js/striveboybiao-text.js"></script>
 <!--下雪特效-->
