--- a/src/main/resources/templates/blog/learn_article.html
+++ b/src/main/resources/templates/blog/learn_article.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>何彪个人博客-一个开启你记录旅行的足迹和分享途中所见所闻，与探讨互联网神秘技术的网站</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords"  th:content="${list.gjzc}" />
 <meta name="description" th:content="${list.title}" />
 <link href="/css/base.css" rel="stylesheet">
@@ -170,7 +171,7 @@
   </aside>
 </article>
 <footer>
-  <p class="ft-copyright">何彪个人博客 Sunshine &nbsp;&nbsp;鄂ICP备18012534号</p>
+  <p class="ft-copyright">何彪个人博客 StriveBoyBiao &nbsp;&nbsp;鄂ICP备18012534号</p>
 <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
 
@@ -179,7 +180,7 @@ swfobject.registerObject("FlashID");
 </script>
 <script src="/js/vue.js" type="text/javascript"></script>
 <script src="/js/article.js" type="text/javascript"></script>
-<script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
+<script color="255,0,0" opacity="0.7" zindex="-2" count="60" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
 <!--双击文字特效-->
 <script src="/js/striveboybiao-text.js"></script>
 <!--下雪特效-->
