--- a/src/main/resources/templates/blog/learn_article.html
+++ b/src/main/resources/templates/blog/learn_article.html
@@ -16,6 +16,8 @@
 <script src="/js/swfobject_modified.js" type="text/javascript"></script>
 <!-- 返回顶部调用 end-->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!--3D图片旋转-->
+<link rel="stylesheet" href="/css/swiper.css">
 </head>
 <body id="app-article">
 
@@ -64,6 +66,85 @@
     <ul class="pagelist">
     
    </ul>
+
+      <!--3D图片旋转开始-->
+      <div id="ssdm">
+          <div class="searchicozz"></div>
+      </div>
+      <div class="bannerw">
+          <div class="swiper-container swiper-container-cube swiper-container-3d swiper-container-horizontal" style="cursor: grab;">
+              <div class="swiper-wrapper" style="transition-duration: 0ms; transform-origin: 50% 50% -412.5px; transform: translate3d(0px, 0px, 0px) rotateX(0deg) rotateY(-360deg);">
+                  <div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="8" style="width: 825px; transition-duration: 0ms; transform: rotateX(0deg) rotateY(0deg) translate3d(0px, 0px, 0px);">
+                      <a href="#" target="_blank" title="在留言板栏目大家可以和博主展开互动。"><img src="/images/img/lyb.jpg"></a>
+                  </div>
+                  <div class="swiper-slide" data-swiper-slide-index="0" style="width: 825px; transition-duration: 0ms; transform: rotateX(0deg) rotateY(90deg) translate3d(0px, 0px, 0px);">
+                      <a href="#" target="_blank" title="在留言板栏目大家可以和博主展开互动。"><img src="/images/img/qdfx.jpg"></a>
+                  </div>
+                  <div class="swiper-slide" data-swiper-slide-index="1" style="width: 825px; transition-duration: 0ms; transform: rotateX(0deg) rotateY(180deg) translate3d(825px, 0px, 825px);">
+                      <a href="#" target="_blank" title="在留言板栏目大家可以和博主展开互动。"><img src="/images/img/jsjc.jpg"></a>
+                  </div>
+                  <div class="swiper-slide swiper-slide-prev" data-swiper-slide-index="2" style="width: 825px; transition-duration: 0ms; transform: rotateX(0deg) rotateY(270deg) translate3d(-825px, 0px, 2475px);">
+                      <a href="#" target="_blank" title="在留言板栏目大家可以和博主展开互动。"><img src="/images/img/rjsc.jpg"></a>
+                  </div>
+                  <div class="swiper-slide swiper-slide-active" data-swiper-slide-index="3" style="width: 825px; transition-duration: 0ms; transform: rotateX(0deg) rotateY(360deg) translate3d(-3300px, 0px, 0px);">
+                      <a href="#" target="_blank" title="在留言板栏目大家可以和博主展开互动。"><img src="/images/img/gyw.jpg"></a>
+                  </div>
+                  <div class="swiper-slide swiper-slide-next" data-swiper-slide-index="4" style="width: 825px; transition-duration: 0ms; transform: rotateX(0deg) rotateY(450deg) translate3d(0px, 0px, -3300px);">
+                      <a href="#" target="_blank" title="在留言板栏目大家可以和博主展开互动。"><img src="/images/img/zzbw.jpg"></a>
+                  </div>
+                  <div class="swiper-slide" data-swiper-slide-index="5" style="width: 825px; transition-duration: 0ms; transform: rotateX(0deg) rotateY(540deg) translate3d(4125px, 0px, 825px);">
+                      <a href="#" target="_blank" title="碎言碎语栏目展示博主的一些生活感悟。"><img src="/images/img/sysy.jpg"></a></div>
+                  <div class="swiper-slide" data-swiper-slide-index="6" style="width: 825px; transition-duration: 0ms; transform: rotateX(0deg) rotateY(630deg) translate3d(-825px, 0px, 5775px);">
+                      <a href="#" target="_blank" title="旅行日记栏目记录博主在旅行途中每天的所见所闻，所悟所想。"><img src="/images/img/lxrj.jpg"></a></div>
+                  <div class="swiper-slide" data-swiper-slide-index="7" style="width: 825px; transition-duration: 0ms; transform: rotateX(0deg) rotateY(720deg) translate3d(-6600px, 0px, 0px);">
+                      <a href="#" target="_blank" title="摄影图片栏目展示博主个人的摄影作品。"><img src="/images/img/sytp.jpg"></a></div>
+                  <div class="swiper-slide" data-swiper-slide-index="8" style="width: 825px; transition-duration: 0ms; transform: rotateX(0deg) rotateY(810deg) translate3d(0px, 0px, -6600px);">
+                      <a href="#" target="_blank" title="在留言板栏目大家可以和博主展开互动。"><img src="/images/img/lyb.jpg"></a></div>
+                  <div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="0" style="width: 825px; transition-duration: 0ms; transform: rotateX(0deg) rotateY(900deg) translate3d(7425px, 0px, 825px);">
+                      <a href="#" target="_blank" title="在留言板栏目大家可以和博主展开互动。"><img src="/images/img/qdfx.jpg"></a>
+                  </div>
+              </div>
+
+              <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide"></div>
+              <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide"></div>
+
+              <div class="swiper-pagination swiper-pagination-fraction"><span class="swiper-pagination-current">4</span> / <span class="swiper-pagination-total">9</span></div>
+              <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
+          <script src=/js/swiper.js"></script>
+          <script>
+              var mySwiper = new Swiper ('.swiper-container', {
+                  direction: 'horizontal', //切换方向，vertical为垂直切换
+                  loop: true, //是否循环
+                  autoplay: {
+                      delay: 3000, //轮播间隔时间
+                      disableOnInteraction: false, //对轮播图操作后依然自动播放
+                  },
+                  speed: 1500, //一张图片完成运动需要的时间
+                  effect: 'cube', //3D方块切换
+                  grabCursor: true,
+                  cubeEffect: {
+                      shadow: false, //是否显示投影
+                      slideShadows: false, //是否显示slide阴影
+                      shadowOffset: 20, //投影距离
+                      shadowScale: 0.94, //投影缩放比例
+                  },
+                  //前进后退控制按钮
+                  navigation: {
+                      nextEl: '.swiper-button-next',
+                      prevEl: '.swiper-button-prev',
+                  },
+                  //指示切换到第几张
+                  pagination: {
+                      el: '.swiper-pagination',
+                      type: 'fraction',
+                  },
+              })
+          </script>
+      </div>
+      <!--3D图片旋转结束-->
+
+
+
       <div class="otherlink">
           <h2 style="color: red">您觉得喜欢本网站,或者觉得本文章对您有帮助，那么可以选择打赏。打赏多少，您高兴就行，谢谢您对我的支持！ ~(@^_^@)~</h2>
           <img src="/images/img/qrcode.jpg" alt="" style="width: 200px;height: 200px;">
