--- a/src/main/resources/static/css/learn.css
+++ b/src/main/resources/static/css/learn.css
@@ -375,7 +375,7 @@ nav {
 	height: 60px;
 	margin: 10px 0 0 0;
 	position: absolute;
-	background: url(../images/img/logo.jpg) no-repeat;
+	background: url(../images/logo.png) no-repeat;
 	display: block;
 }
 
