--- a/src/main/resources/templates/blog/doing.html
+++ b/src/main/resources/templates/blog/doing.html
@@ -135,12 +135,12 @@ s.parentNode.insertBefore(hm, s);
 <!-- 返回顶部调用 begin -->
 <script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="/js/js.js"></script>
-<script src="/js/swfobject_modified.js" type="text/javascript"></script>
+<!--<script src="/js/swfobject_modified.js" type="text/javascript"></script>-->
 <!-- 返回顶部调用 end-->
 <script src="/js/silder.js"></script>
-<script type="text/javascript">
+<!--<script type="text/javascript">
 swfobject.registerObject("FlashID");
-</script>
+</script>-->
 <script src="/js/vue.js" type="text/javascript"></script>
 <script src="/js/doing.js" type="text/javascript"></script>
 <script color="255,0,0" opacity="0.7" zindex="-2" count="60" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
