--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -20,7 +20,6 @@ body, td, th {
 
 <body>
 
-<!--header--> 
 <!--header-->
 <header>
   <div id="logo"><a href="http://www.zizhuling.cn" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
@@ -35,9 +34,6 @@ body, td, th {
     <a href="/saying" title="留言板"><span>留言板</span><span class="en"></span></a>
   </nav>
 </header>
-<!--header--> 
-
-<!--header--> 
 
 <!--banner广告-->
 <div class="banner">
@@ -121,7 +117,8 @@ body, td, th {
         </ul>
       </div>
     </div>
-    <script type="text/javascript" src="/js/jia.js" charset="utf-8"></script> 
+    <!--分享数量-->
+    <script type="text/javascript" src="/js/jia.js" charset="utf-8"></script>
     <!--tit01 end-->
     <!--添加音乐-->
    <!-- <div class="tit01">
@@ -163,32 +160,17 @@ body, td, th {
       <div class="ms-main" id="ms-main">
         <div style="display: block;" class="bd bd-news">
           <ul id="rankData">
-           <!-- <li><a href="/" target="_blank">分享一个炫酷利用纯CSS3实现的手风琴</a></li>
-            <li><a href="/" target="_blank">两只蜗牛艰难又浪漫的一吻</a></li>
-            <li><a href="/" target="_blank">每每接到新项目，都感觉困难，踏出</a></li>
-            <li><a href="/" target="_blank">春暖花开-走走停停-发现美</a></li>
-            <li><a href="/" target="_blank">Ui Parade免费的UI在线设计工具</a></li>
-            <li><a href="/" target="_blank">记得秋天吗</a></li>-->
+
           </ul>
         </div>
         <div  class="bd bd-news">
           <ul id="newsData">
-           <!-- <li><a href="/" target="_blank">给我一个答案</a></li>
-            <li><a href="/" target="_blank">生活是什么？</a></li>
-            <li><a href="/" target="_blank">那些不是事</a></li>
-            <li><a href="/" target="_blank">路·过-喜欢在路上</a></li>
-            <li><a href="/" target="_blank">人生因分享,人生因分享的风景</a></li>
-            <li><a href="/" target="_blank">跟着自己的心走</a></li>-->
+
           </ul>
         </div>
         <div class="bd bd-news">
           <ul id="nominateData">
-           <!-- <li><a href="/" target="_blank">人生的感悟</a></li>
-            <li><a href="/" target="_blank">分享逗逼三人游云南旅行</a></li>
-            <li><a href="/" target="_blank">遇见一个未知的你</a></li>
-            <li><a href="/" target="_blank">重来</a></li>
-            <li><a href="/" target="_blank">简易选项卡</a></li>
-            <li><a href="/" target="_blank">中国女排3∶2险胜美国</a></li>-->
+
           </ul>
         </div>
       </div>
@@ -235,29 +217,7 @@ body, td, th {
     <div class="tuwen">
       <h3>图文推荐</h3>
       <ul id="readingData">
-     <!--   <li>
-          <a href="/a/xiangshoumanhuo/20150609/22.html"><img src='/images/1433907076123565-lp.jpg' border='0' width='120' height='120' alt='两只蜗牛艰难又浪漫的一吻'><b>两只蜗牛艰难又浪漫的一吻</b></a>
-          <p><span class="tulanmu"><a href="/a/xiangshoumanhuo/index.html">享受慢活</a></span><span class="tutime">2015-06-10</span></p>
-        </li>
 
-<li><a href="/a/fenxiangshaer/20150610/70.html"><img src='/images/1433936858662517-lp.jpg' border='0' width='120' height='120' alt='今天'><b>今天</b></a>
-          <p><span class="tulanmu"><a href="/a/fenxiangshaer/index.html">分享shaer</a></span>
-          <span class="tutime">2015-06-10</span></p>
-        </li>
-<li><a href="/a/youke/20150609/17.html"><img src='/images/1433907243115781-lp.jpg' border='0' width='120' height='120' alt='程序员请放下你的技术情节，与你的同伴一起进'><b>程序员请放下你的技术情节，与</b></a>
-          <p><span class="tulanmu"><a href="/a/youke/index.html">悠客</a></span>
-          <span class="tutime">2015-06-10</span></p>
-        </li>
-<li><a href="/a/jiluhuiyi/20150610/77.html"><img src='/images/1433940857381820-lp.jpg' border='0' width='120' height='120' alt='一个人最好的模样大概是平静一点，坦然接受自'><b>一个人最好的模样大概是平静一</b></a>
-          <p><span class="tulanmu"><a href="/a/jiluhuiyi/index.html">记录回忆</a></span>
-          <span class="tutime">2015-06-10</span></p>
-        </li>
-<li><a href="/a/manglitouxian/20150609/5.html"><img src='/images/1433907506239514-lp.jpg' border='0' width='120' height='120' alt='每个人都会有一段异常艰难的时光，'><b>每个人都会有一段异常艰难的时</b></a>
-          <p><span class="tulanmu"><a href="/a/manglitouxian/index.html">忙里偷闲</a></span>
-          <span class="tutime">2015-06-10</span></p>
-        </li>-->
-
-        
       </ul>
     </div>
     
