--- a/src/main/resources/templates/blog/music.html
+++ b/src/main/resources/templates/blog/music.html
@@ -10,7 +10,7 @@
 <!--[if lt IE 9]>
 <script src="/js/modernizr.js"></script>
 <![endif]-->
-<script src="/js/swfobject_modified.js" type="text/javascript"></script>
+<!--<script src="/js/swfobject_modified.js" type="text/javascript"></script>-->
 <!-- 返回顶部调用 begin -->
 <script type="text/javascript" src="/js/jquery.1.4.2-min.js"></script>
 <script type="text/javascript" src="/js/js.js"></script>
@@ -197,9 +197,9 @@ s.parentNode.insertBefore(hm, s);
 <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
 <script src="/js/silder.js"></script>
-<script type="text/javascript">
+<!--<script type="text/javascript">
 swfobject.registerObject("FlashID");
-</script>
+</script>-->
 <script color="255,0,0" opacity="0.7" zindex="-2" count="60" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
 <!--双击文字特效-->
 <script src="/js/striveboybiao-text.js"></script>
