--- a/src/main/resources/templates/blog/learn.html
+++ b/src/main/resources/templates/blog/learn.html
@@ -71,7 +71,7 @@
             	<meta http-equiv="x-ua-compatible" content="IE=9">   <!-- 嵌入式 -->  
                 	<div class="bdcs-main bdcs-clearfix" id="default-searchbox">
                     	<div class="bdcs-search bdcs-clearfix" id="bdcs-search-inline">
-                        	<form class="bdcs-search-form" id="bdcs-search-form" action="/plus/search.php" method="get" target="_blank" autocomplete="off">
+                        	<form class="bdcs-search-form" id="bdcs-search-form"   autocomplete="off">
                             	<input name="s" type="hidden" value="14370360379971546235">
                                 <input name="entry" type="hidden" value="1">
                                 <input name="ie" type="hidden" value="gbk">
@@ -141,16 +141,16 @@
 <script src="/js/modernizr.js"></script>
 <![endif]-->
 <!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/jquery.1.4.2-min.js"></script>
+<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="/js/js.js"></script>
-<script src="/js/swfobject_modified.js" type="text/javascript"></script>
+<!--<script src="/js/swfobject_modified.js" type="text/javascript"></script>-->
 <!-- 返回顶部调用 end-->
 
 <script src="/js/silder.js"></script>
 <script src="/js/i.js" type="text/javascript"></script>
-<script type="text/javascript">
+<!--<script type="text/javascript">
 swfobject.registerObject("FlashID");
-</script>
+</script>-->
 <!-- share分享 -->
 <script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"18067716981","tqq":"1016340174@qq.com"},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"32"},"share":{},"image":{"viewList":["tsina","tqq","qzone","weixin","renren"],"viewText":"分享到：","viewSize":"32"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["tsina","tqq","qzone","weixin","renren"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api//js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
 
