--- a/src/main/resources/templates/blog/learn_article.html
+++ b/src/main/resources/templates/blog/learn_article.html
@@ -13,7 +13,7 @@
 <!-- 返回顶部调用 begin -->
 <script type="text/javascript" src="/js/jquery.1.4.2-min.js"></script>
 <script type="text/javascript" src="/js/js.js"></script>
-<script src="/js/swfobject_modified.js" type="text/javascript"></script>
+<!--<script src="/js/swfobject_modified.js" type="text/javascript"></script>-->
 <!-- 返回顶部调用 end-->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!--3D图片旋转-->
@@ -255,9 +255,9 @@
 <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
 
-<script type="text/javascript">
+<!--<script type="text/javascript">
 swfobject.registerObject("FlashID");
-</script>
+</script>-->
 <script src="/js/vue.js" type="text/javascript"></script>
 <script src="/js/article.js" type="text/javascript"></script>
 <script color="255,0,0" opacity="0.7" zindex="-2" count="60" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
