--- a/src/main/resources/templates/blog/photo.html
+++ b/src/main/resources/templates/blog/photo.html
@@ -14,18 +14,10 @@
 <link rel="stylesheet" href="/css/baguettebox.min.css">
 <link rel="stylesheet" href="/css/lrtk.css">
 <script src="/js/baguettebox.min.js"></script>
-<!--分享相册-->
-<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="/js/waterfall.js" ></script>
+
 <!--图片特效-->
 <link rel="stylesheet" href="/css/viewer.css">
-<script src="/js/viewer.js"></script>
-<!--[if lt IE 9]>
-<script src="/js/modernizr.js"></script>
-<![endif]-->
-<!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/js.js"></script>
-<script src="/js/swfobject_modified.js" type="text/javascript"></script>
+
 <!-- 返回顶部调用 end-->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
@@ -527,9 +519,21 @@ baguetteBox.run('.baguetteBoxOne', {
 <!--
 <script type="text/javascript">jQuery(".lanmubox").slide({easing:"easeOutBounce",delayTime:400});</script>
 -->
+<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
+<!--分享相册-->
+<script type="text/javascript" src="/js/waterfall.js" ></script>
+<!--图片特效-->
+<script src="/js/viewer.js"></script>
+<!--[if lt IE 9]>
+<script src="/js/modernizr.js"></script>
+<![endif]-->
+<!-- 返回顶部调用 begin -->
+<script type="text/javascript" src="/js/js.js"></script>
+<!--<script src="/js/swfobject_modified.js" type="text/javascript"></script>
 <script type="text/javascript">
-swfobject.registerObject("FlashID");
-</script>
+    swfobject.registerObject("FlashID");
+</script>-->
+
 <script src="/js/vue.js" type="text/javascript"></script>
 <script src="/js/photo.js" type="text/javascript"></script>
 <script color="255,0,0" opacity="0.7" zindex="-2" count="60" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
@@ -537,5 +541,6 @@ swfobject.registerObject("FlashID");
 <script src="/js/striveboybiao-text.js"></script>
 <!--下雪特效-->
 <!--<script src="/js/striveboybiao-snow.js"></script>-->
+
 </body>
 </html>
