--- a/src/main/resources/templates/blog/saying.html
+++ b/src/main/resources/templates/blog/saying.html
@@ -6,14 +6,7 @@
 <meta name="description" content="一个关注旅行，在路上寻找那个丢失自我，远离城市的喧哗，放慢脚步去享受慢生活，分享在路上所见所闻，与大家一起发现这世界的千奇百怪！" />
 <link href="/css/base.css" rel="stylesheet">
 <link href="/css/book.css" rel="stylesheet">
-<!--[if lt IE 9]>
-<script src="/js/modernizr.js"></script>
-<![endif]-->
-<!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/jquery.1.4.2-min.js"></script>
-<script type="text/javascript" src="/js/js.js"></script>
-<script src="/js/swfobject_modified.js" type="text/javascript"></script>
-<!-- 返回顶部调用 end-->
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 </head>
@@ -37,30 +30,10 @@
 <article class="aboutcon">
 	<h1 class="t_nav">
     	<span>你，生命中最重要的过客，之所以是过客，因为你未曾为我停留。</span>
-        <a href="/" title="网站首页" class="n1">网站首页</a>
+        <a href="/index" title="网站首页" class="n1">网站首页</a>
         <a href="/" title="留言板" class="n2">留言版</a>
     </h1>
     <div class="book left">
-    	<!--<h1 class="h1">欢迎你耐心的浏览到这里，有什么好的建议和想法对站长说的！</h1>-->
-    <!-- Duoshuo Comment BEGIN -->
-        <!-- 多说最新评论 start -->
-	<div class="ds-recent-comments" data-num-items="5" data-show-avatars="1" data-show-time="1" data-show-title="1" data-show-admin="1" data-excerpt-length="70"></div>
-<!-- 多说最新评论 end -->
-<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
-var duoshuoQuery = {short_name:"aiwke"};
-	(function() {
-		var ds = document.createElement('script');
-		ds.type = 'text/javascript';ds.async = true;
-		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-		ds.charset = 'UTF-8';
-		(document.getElementsByTagName('head')[0] 
-		 || document.getElementsByTagName('body')[0]).appendChild(ds);
-	})();
-	</script>
-<!-- 多说公共JS代码 end -->    <!-- Duoshuo Comment END -->
-
-
         <!--添加评论-->
         <div class="tit01">
             <h3>文章评论</h3>
@@ -74,7 +47,6 @@ var duoshuoQuery = {short_name:"aiwke"};
                 conf: 'prod_07cc58b4a84c0ffab71eb1ca6cc6c9a4'
             });
         </script>
-
 
     </div>
     <aside class="right">
@@ -133,14 +105,25 @@ var duoshuoQuery = {short_name:"aiwke"};
   <p class="ft-copyright">何彪个人博客 StriveBoyBiao &nbsp;&nbsp;鄂ICP备18012534号</p>
 <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
-<script src="/js/silder1.js"></script>
-<script type="text/javascript">
-new slider({id:'slider'})
-</script>
+
+<!--[if lt IE 9]>
+<script src="/js/modernizr.js"></script>
+<![endif]-->
+<!-- 返回顶部调用 begin -->
+<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="/js/js.js"></script>
+<script src="/js/swfobject_modified.js" type="text/javascript"></script>
+<!-- 返回顶部调用 end-->
+
+
 <script color="255,0,0" opacity="0.7" zindex="-2" count="60" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
 <!--双击文字特效-->
 <script src="/js/striveboybiao-text.js"></script>
 <!--下雪特效-->
 <!--<script src="/js/striveboybiao-snow.js"></script>-->
+<script src="/js/silder1.js"></script>
+<script type="text/javascript">
+    new slider({id:'slider'})
+</script>
 </body>
 </html>
