--- a/src/main/resources/templates/blog/learn_article.html
+++ b/src/main/resources/templates/blog/learn_article.html
@@ -251,7 +251,7 @@
   </aside>
 </article>
 <footer>
-  <p class="ft-copyright">何彪个人博客 StriveBoyBiao &nbsp;&nbsp;鄂ICP备18012534号</p>
+  <p class="ft-copyright">何彪个人博客 StriveBoyBiao &nbsp;&nbsp;备案号:&nbsp;<a href="http://www.beian.miit.gov.cn/" target="_blank" style="color:#f1f1f1">鄂ICP备18012534号</a></p>
 <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
 
