--- a/src/main/resources/templates/blog/doing.html
+++ b/src/main/resources/templates/blog/doing.html
@@ -129,7 +129,7 @@ s.parentNode.insertBefore(hm, s);
     </div>
 </section>
 <footer>
-  <p class="ft-copyright">何彪个人博客 StriveBoyBiao &nbsp;&nbsp;鄂ICP备18012534号</p>
+  <p class="ft-copyright">何彪个人博客 StriveBoyBiao &nbsp;&nbsp;备案号:&nbsp;<a href="http://www.beian.miit.gov.cn/" target="_blank" style="color:#f1f1f1">鄂ICP备18012534号</a></p>
 <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
 <!-- 返回顶部调用 begin -->
