--- a/src/main/resources/templates/blog/photo.html
+++ b/src/main/resources/templates/blog/photo.html
@@ -512,7 +512,7 @@ baguetteBox.run('.baguetteBoxOne', {
     <div class="page" style='width: 600px;margin-left:45%;' id='footer'></div>
     <!--分页结束-->
 <footer>
-  <p class="ft-copyright">何彪个人博客 StriveBoyBiao &nbsp;&nbsp;鄂ICP备18012534号</p>
+  <p class="ft-copyright">何彪个人博客 StriveBoyBiao &nbsp;&nbsp;备案号:&nbsp;<a href="http://www.beian.miit.gov.cn/" target="_blank" style="color:#f1f1f1">鄂ICP备18012534号</a></p>
 <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer> 
 <script src="/js/silder.js"></script>
